Fix links too close on mobile

--- a/_sass/_general.sass
+++ b/_sass/_general.sass
@@ -60,4 +60,5 @@ ul.post-list
     width: 95vw
     code
       overflow-wrap: break-word
-
+  .post-details > p
+    margin: 0.5em 0
